# cargo build --release --target=x86_64-unknown-linux-musl
# cargo test -- --nocapture utils::unix_crypt::tests::test_rand_password
[package]
name = "geo_server"
version = "1.0.0"
authors = ["kiven <kivensoft@gmail.com>"]
edition = "2021"
description = "地址解析服务"
repository = "https://github.com/kivensoft/geo_server"
build = "build.rs"

[profile.release]
opt-level = 'z'  # Optimize for size
lto = true
strip = true
codegen-units = 1
incremental = false
panic = 'abort'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["multi_thread"]
# current_thread = []
multi_thread = []

[dependencies]
tokio = { version = "1.36", features = ["full"] } # 最流行的异步io库
hyper = { version = "1.1", features = ["http1", "client"] } # 最流行的底层http协议库
http-body-util = "0.1" # hyper库的body扩展
serde = { version = "1.0", features = ["derive", "rc"] } # 最流行的序列化反序列化库
serde_json = "1.0" # 最流行的json序列化反序列化库
anyhow = "1.0" # 最流行的错误处理库
log = "0.4" # 日志门面库，官方标准
time = { version = "0.3", features = ["formatting", "parsing", "macros", "serde"] } # 官方推荐的日期时间库
async-trait = "0.1" # trait的异步函数声明库
futures = "0.3" # 异步编程的官方库
futures-util = "0.3" # 异步扩展库
compact_str = { version = "0.7", features = ["serde", "bytes"] } # 短字符串存储在栈中的string替代品
parking_lot = "0.12" # 性能更好的替代标准库Mutex/RwLock的三方库
rclite = "0.2" # 比标准库的Arc更轻量的替代类
rand = "0.8" # 最广泛使用的随机数生成库
# smallvec = { version = "1.10", features = ["write"] } # 基于栈的动态数组
smallstr = "0.3" # 基于栈的字符串
memmap = "0.7" # 跨平台支持的内存映射文件库
persy = "1.5" # 高性能轻量级kv存储库
geo = "0.28" # 地理坐标库
appconfig = { version = "1.0", git = "https://gitee.com/kivensoft/appconfig_rs.git", features = ["chinese"] } # 支持命令行参数解析和配置文件参数解析的库
ansicolor = { version = "1.0", git = "https://gitee.com/kivensoft/ansicolor_rs.git" } # 支持终端ansi颜色的库
asynclog = { version = "1.0", git = "https://gitee.com/kivensoft/asynclog_rs.git" } # 支持同步和异步两种方式的迷你日志实现库
localtime = { version = "1.0", git = "https://gitee.com/kivensoft/localtime_rs.git", features = ["mysql_common"] } # 本地时间序列化反序列化库
httpserver = { version = "1.0", path = "httpserver" } # 迷你的http库
